# fapolicyd

./: .gitignore  Makefile.am  configure.ac
analyzer/: .clang-format  configure.ac
analyzer/src/: Makefile.am
analyzer/src/bindings/: Makefile.am  fapolicyanalyzer.i
analyzer/src/bindings/python/: fapolicyanalyzer.py  fapolicyanalyzer_wrap.cpp
analyzer/src/libfapolicyd-analyzer/: rpmdb_read.c  rpmdb_read.h  rpmdb_table.cpp  rpmdb_table.hpp  sha256.c  sha256.h  system_trust.cpp  system_trust.hpp  table.cpp  table.hpp
analyzer/src/server/: fapolicyd-analyzer-client-proxy.hpp  fapolicyd-analyzer-client.cpp  fapolicyd-analyzer-client.hpp  fapolicyd-analyzer-interface.xml  fapolicyd-analyzer-server-adaptor.hpp  fapolicyd-analyzer-server.cpp  fapolicyd-analyzer-server.hpp
analyzer/src/test/: Makefile.am  rpm-test.cpp  rpmdb_read-test.c  rpmdb_table-test.cpp  table-test.cpp
